# telegram-bot

./: Cargo.toml  README.md  xcompile.sh
src/: arrival.rs  config.rs  dispatch.rs  forecast.rs  main.rs  metro.rs  spending.rs  weather.rs
