[package]
name = "telegram-chatbot"
version = "0.4.0"
authors = ["Bryant Deters <bryantdeters@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
log = "0.4"
teloxide = "0.2"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["macros"] }
algorithmia = "2.1.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.3"
reqwest = "0.9"
forecast = "2.0.0"
chrono = "0.4"
once_cell = "1.3.1"

[profile.release]
lto = true
