[package]
name = "telegram-chatbot"
version = "0.4.0"
authors = ["Bryant Deters <bryantdeters@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
actix-web-prom = "0.2"
futures = "0.3"
log = "0.4"
teloxide = "0.2"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["macros"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.3"
reqwest = "0.10"
forecast = "3.0.0"
chrono = "0.4"
once_cell = "1.3.1"
prometheus = "0.8.0"

[profile.release]
lto = true
