[package]
name = "telegram-chatbot"
version = "0.4.1"
authors = ["Bryant Deters <bryantdeters@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
actix-web-prom = "0.2"
teloxide = "0.3"
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.3"
reqwest = "0.10"
forecast = "3.0.0"
chrono = "0.4"
prometheus = "0.8.0"

[profile.release]
lto = true
